test/errors/error17.sp
% t is an arithmetic term with at least one arithmetic operation 
% and corresponding sort does not contain a number
sorts
#s={a,b,c,1}-{1}.
predicates
p(#s).
rules
p(X+1).
